---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
error[E0000]: function `foo` expects 1 arguments, but 0 were provided
  ┌─ main:6:2
  │
1 │ fn foo(i13 x) {
  │ -- `foo` defined with 1 parameters
  ·
6 │     foo();
  │     ^^^-- 0 arguments supplied
  │     │   
  │     function `foo` expects 1 arguments, but 0 were provided


